feat: swagge authentication apiKey
